# wanderrust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  TODO.md
.claude/: settings.local.json
.serena/: project.yml
data/: Smugglers Cave_TheCave__level.ron  SmugglersCave_TheCave__level.ron  Untitled.ron  actors.ron  first.ron  portals.ron  wandrs_proto.ldtk
data/ldtk/: JSON_SCHEMA.json  wndrs-proto.ldtk
docs/: active_stratum.md  alt_tiles.md  big_tiles.md  effects.md  flip_tiles.md  ldtk_map_editor.md  levelwise_spawning.md  levers_and_gates.md  load_next_map.md  mini_health_bars.md  notes_on_some_patterns.md  strata.md  strata_lightmap.md  wanderl2r.md
docs/archive/: ldtk_2_5d.md
src/: actors.rs  ascii_map.rs  atlas.rs  bestiary.rs  camera.rs  cell.rs  colors.rs  combat.rs  debug.rs  diagnostics.rs  editor.rs  effects.rs  equipment.rs  event_log.rs  fov.rs  gamestate.rs  grid.rs  interactions.rs  inventory.rs  ldtk.rs  ldtk_loader.rs  lib.rs  light.rs  loot.rs  macros.rs  main.rs  map.rs  mobs.rs  parameters.rs  player.rs  procgen.rs  ptable.rs  queries.rs  sounds.rs  states.rs  test_entities.rs  tilegrid.rs  tilemap.rs  tiles.rs  title_screen.rs  (+3 more)
wanderl2r/: Cargo.toml
wanderl2r/data/: tile_exporter.smuggler's_cave.json  tile_replacer.amede_town.json  tile_replacer.ruins.json  tile_replacer.smugglers_cave.json  tile_replacer.the_valley.json
wanderl2r/src/: main.rs
