[workspace]
members = [".", "mrpas"]

[package]
name = "wanderrust"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d", "debug", "mouse", "bevy_picking"] }
bevy_egui = "0.39.1"
itertools = "0.14.0"
mrpas = { path = "mrpas" }
rand = "0.10.0"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
