[package]
name = "wanderl2r"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.9"
indicatif = "0.18.4"
log = { version = "0.4.29", features = ["std"] }
ron = "0.12.0"
serde_json = "1.0.149"
wanderrust = { version = "0.1.0", path = ".." }
